handle multiple urls
